updated text contrasts, fixing double tap hover on mobile

--- a/app.css
+++ b/app.css
@@ -175,6 +175,10 @@ input[type="button"]:active {
     .above-5, .below-5 {
         font-size: 14pt;
     }
+
+    input[type="button"]:hover {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 550px) {
